Update 1.110 Insiders release notes for February 23, 2026

--- a/release-notes/v1_110.md
+++ b/release-notes/v1_110.md
@@ -57,7 +57,13 @@ Navigation End -->
 
 ## February 23, 2026
 
-* The model picker in chat has been redesigned with sections for recent models and search functionality. [#293875](https://github.com/microsoft/vscode/issues/293875)
+* Customizable header toolbar in the integrated browser to hide or show actions like opening developer tools or adding elements to chat as context. [#290084](https://github.com/microsoft/vscode/issues/290084)
+
+* VS Code now supports Ghostty as an external terminal on macOS and Linux. [#284265](https://github.com/microsoft/vscode/issues/284265)
+
+* Native browser integration in chat, enabling you to interact with page elements, capture screenshots for visual debugging, and access real-time browser console logs directly by AI agents. [#274118](https://github.com/microsoft/vscode/issues/274118)
+
+* Redesigned the model picker in chat with sections for recent models and search functionality. [#293875](https://github.com/microsoft/vscode/issues/293875)
 
 ## February 20, 2026
 
