--- a/release-notes/v1_110.md
+++ b/release-notes/v1_110.md
@@ -13,7 +13,7 @@ ProductEdition: Insiders
 
 ![VS Code Insiders banner](images/1_110/vscode-insiders-banner-medium.png)
 
-_Last updated: February 23, 2026_
+_Last updated: February 24, 2026_
 
 These release notes cover the Insiders build of VS Code and continue to evolve as new features are added. To try the latest updates, [download Insiders](https://code.visualstudio.com/insiders).
 To read these release notes online, go to [code.visualstudio.com/updates](https://code.visualstudio.com/updates).
@@ -31,6 +31,7 @@ Happy Coding!
   <nav id="toc-nav">
     <div>In this update</div>
     <ul>
+      <li><a href="#february-24-2026">February 24, 2026</a></li>
       <li><a href="#february-23-2026">February 23, 2026</a></li>
       <li><a href="#february-20-2026">February 20, 2026</a></li>
       <li><a href="#february-19-2026">February 19, 2026</a></li>
@@ -55,7 +56,29 @@ Happy Coding!
   <div class="notes-main">
 Navigation End -->
 
+## February 24, 2026
+
+* The `~/.copilot/instructions` directory is now automatically added to configured instruction load paths. [#297179](https://github.com/microsoft/vscode/issues/297179)
+
+* Tool names in YAML configuration files are now displayed without quotes when they don't contain special characters. [#280817](https://github.com/microsoft/vscode/issues/280817)
+
+* Added a setting to automatically include a `Co-authored-by` commit trailer when AI-generated code is included in a commit. [#266584](https://github.com/microsoft/vscode/issues/266584), [#50090](https://github.com/microsoft/vscode/issues/50090)
+
+* Quick Pick dialogs can now render closer to the UI element that triggered them, such as when selecting a chat title to switch to another chat session. [#238095](https://github.com/microsoft/vscode/issues/238095)
+
+* Added Win32 version metadata to all shipped executables, enabling AppLocker rules that require signed executables with product metadata. [#167814](https://github.com/microsoft/vscode/issues/167814)
+
 ## February 23, 2026
+
+* Add support for slash commands for background agents. [#297117](https://github.com/microsoft/vscode/issues/297117)
+
+* Don't show chat tips when the user isn't signed in. [#297041](https://github.com/microsoft/vscode/issues/297041)
+
+* Local MCP servers using stdio transport can now run in a sandbox. The sandbox adds an isolation boundary for access to the file system and network. [#294029](https://github.com/microsoft/vscode/issues/294029)
+
+* Add support for renaming Claude agent sessions from the sessions list. [#292744](https://github.com/microsoft/vscode/issues/292744)
+
+* In inline chat, "Add selection to chat" sends the selected text to the active chat queue. [#289933](https://github.com/microsoft/vscode/issues/289933)
 
 * Customizable header toolbar in the integrated browser to hide or show actions like opening developer tools or adding elements to chat as context. [#290084](https://github.com/microsoft/vscode/issues/290084)
 
