Include hidden edit mode in release notes

--- a/release-notes/v1_109.md
+++ b/release-notes/v1_109.md
@@ -256,6 +256,14 @@ Let us know what works and where we can improve by giving feedback in the [vscod
 
 ![Screenshot showing the new experimental VS Code Light theme.](images/1_109/vscode-light-experimental-theme.webp)
 
+## Edit mode is now hidden (Experimental)
+
+**Setting**: `setting(chat.editMode.hidden)`
+
+Edit mode is now hidden by default from the agent dropdown in chat. Using agents provides a superset of edit mode capabilities and produces better results for code editing tasks.
+
+If your organization has disabled agent mode, edit mode remains visible in the agent dropdown. You can also manually restore edit mode by disabling the `setting(chat.editMode.hidden)` setting.
+
 ## Agent Session Management
 
 Delegate, monitor, and switch without losing focus. You can now run multiple agent sessions in parallel across local, background, and cloud environments, all from a single unified view. Jump between sessions, track progress at a glance, and let agents work independently while you stay productive.
